--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="/estilo/estilo.css">
+    <link rel="stylesheet" href="/estilo/mediaquery.css">
     <title>Landing Page</title>
 </head>
 <body>
@@ -150,6 +150,6 @@
     </footer>
 
     <script src="script.js"></script>
-    
+
 </body>
 </html>
