--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div id="itens_pizza">
                 <div id="item1">
-                    <img src="images/69d92d7f-d8df-4041-96cd-709813fc4d05.png" alt="calabresa" id="sbr1">
+                    <img src="./images/69d92d7f-d8df-4041-96cd-709813fc4d05.png" alt="calabresa" id="sbr1">
                     <h3><a href="#">Calabresa</a></h3>
                     <p>A pizza de calabresa traz o sabor da linguiça levemente picante, fatiada sobre uma camada de queijo mussarela, finalizada com cebolas frescas e orégano. </p> <br><br>
                     <p>A partir de: <strong>R$ 29,99</strong></p>
