Alterando novamente para configuração correta

--- a/index.html
+++ b/index.html
@@ -68,35 +68,35 @@
 
             <div id="itens_pizza">
                 <div id="item1">
-                    <img src="./images/69d92d7f-d8df-4041-96cd-709813fc4d05.png" alt="calabresa" id="sbr1">
+                    <img src="/images/69d92d7f-d8df-4041-96cd-709813fc4d05.png" alt="calabresa" id="sbr1">
                     <h3><a href="#">Calabresa</a></h3>
                     <p>A pizza de calabresa traz o sabor da linguiça levemente picante, fatiada sobre uma camada de queijo mussarela, finalizada com cebolas frescas e orégano. </p> <br><br>
                     <p>A partir de: <strong>R$ 29,99</strong></p>
                 </div>
 
                 <div id="item2">
-                    <img src="images/pizza-feliciana-salame-e-chorizo-600.png" alt="salaminho" id="sbr2">
+                    <img src="/images/pizza-feliciana-salame-e-chorizo-600.png" alt="salaminho" id="sbr2">
                     <h3><a href="#">Salaminho</a></h3>
                     <p>A pizza de salaminho destaca fatias de salame defumado sobre o queijo derretido, proporcionando um toque levemente apimentado e aroma intenso. </p> <br><br>
                     <p>A partir de: <strong>R$ 34,99</strong></p>
                 </div>
 
                 <div id="item3">
-                    <img src="images/Pizza-Pepperoni-And-Cheese-PNG-Pic-Background.png" alt="peperonni" id="sbr3">
+                    <img src="/images/Pizza-Pepperoni-And-Cheese-PNG-Pic-Background.png" alt="peperonni" id="sbr3">
                     <h3><a href="#">Peperonni</a></h3>
                     <p>Clássica da cozinha internacional, a pizza de peperonni possui fatias finas deste embutido temperado, acompanhadas pelo queijo mussarela derretido. </p> <br><br>
                     <p>A partir de: <strong>R$ 29,99</strong></p>
                 </div>
 
                 <div id="item4">
-                    <img src="images/pizza-margherita.png" alt="tomate" id="sbr4">
+                    <img src="/images/pizza-margherita.png" alt="tomate" id="sbr4">
                     <h3><a href="#">Tomate</a></h3>
                     <p>Essa pizza valoriza os ingredientes frescos: tomates em rodelas, orégano e queijo mussarela dão leveza e um toque adocicado ao paladar. </p> <br><br>
                     <p>A partir de: <strong>R$ 24,99</strong></p>
                 </div>
 
                 <div id="item5">
-                    <img src="images/Expresso-Delivery_5924a8a9ca99b39e73f920d14683ef68.png" alt="azeitona" id="sbr5">
+                    <img src="/images/Expresso-Delivery_5924a8a9ca99b39e73f920d14683ef68.png" alt="azeitona" id="sbr5">
                     <h3><a href="#">Azeitona</a></h3>
                     <p>Simples e deliciosa, a pizza de azeitona leva azeitonas pretas fatiadas sobre o queijo derretido, realçando o sabor com um toque de orégano. </p> <br><br>
                     <p>A partir de: <strong>R$ 24,99</strong></p>
