Atualização  de URL

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="#cnt">Cardápio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/info.html" target="_blank">Quem Somos</a>
+                    <a href="https://anasoaresc.github.io/projeto-landing-page/info.html" target="_blank">Quem Somos</a>
                 </li>
             </ul>
 
